infrastructure/templates/front-service/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-front
  labels:
    name: ms-front

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: ms-front-service
              port: 
                number: 4200
